--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -114,11 +114,11 @@ const projects = [
                 {title}
               </h2>
               {tags && (
-                <ul class="flex gap-2 mt-4">
+                <ul class="flex flex-wrap gap-2 mt-4">
                   {tags.map((tag: any) => (
                     <li class="flex items-center">
                       <span
-                        class={`flex items-center border border-white/20 gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2 `}
+                        class={`flex items-center whitespace-nowrap border border-white/20 gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2 `}
                       >
                         <tag.icon class="size-4" />
                         {tag.name}
