--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import AboutMe from "../components/AboutMe.astro";
 import SectionContainer from "../components/sectionContainer.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Esteban vl - Portafolio.">
   <SectionContainer id="home">
     <Hero />
   </SectionContainer>
