FEAT: add new project and fix cv

--- a/src/components/HeroTitle.astro
+++ b/src/components/HeroTitle.astro
@@ -29,7 +29,9 @@ const { className } = Astro.props;
     únicas.
   </p>
   <nav class="flex justify-center md:justify-start gap-2">
-    <Button>DESCARGAR CV</Button>
+    <a href="/files/cv.pdf" target="_blank">
+      <Button>DESCARGAR CV</Button>
+    </a>
     <a href="mailto:viloriaalgarin@gmail.com">
       <Button variant="outline">CONTACTAME</Button>
     </a>
