--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -49,14 +49,16 @@ const projects = [
     },
   },
   {
-    imageSrc: "/images/projectsImage/schwimmbecken.png",
+    imageSrc: "/images/projectsImage/naturalia.png",
     articleProps: {
-      title: "Schwimmbecken",
+      title: "Naturalia",
       description:
-        "This app allows you to book nearby swimming pools easily and conveniently, perfect for relaxing and enjoying some time in the water.",
+        "I developed an online store for natural products using Next.js, focused on fast navigation and an intuitive user experience. I implemented dynamic filters, product management, and an optimized design to improve conversions.",
       hasView: true,
-      hrefToWebSite: "#",
-      tags: [TAGS.NEXT, TAGS.TAILWIND, TAGS.tRPC, TAGS.PRISMA],
+      hasViewCode: true,
+      hrefToWebSite: "https://naturalia.vercel.app",
+      hrefToRepository: "https://github.com/estebanvl07/naturalia",
+      tags: [TAGS.NEXT, TAGS.TAILWIND],
     },
   },
   {
@@ -68,7 +70,7 @@ const projects = [
       hasView: true,
       hasViewCode: true,
       hrefToWebSite: "#",
-      hrefToRepository: "https://github.com/viloriajoel07/portoflio-ela",
+      hrefToRepository: "https://github.com/estebanvl07/portoflio-ela",
       tags: [TAGS.REACT, TAGS.TAILWIND],
     },
   },
